--- a/web lab/Temperature Converter.html
+++ b/web lab/Temperature Converter.html
@@ -1,5 +1,6 @@
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html>
+    <head>
         <title>Temperature Converter</title>
         <style>
             input{outline: none;}
@@ -53,58 +54,26 @@
             
         }
         </script>
-    <style type="text/css">
-@font-face {
-  font-weight: 400;
-  font-style:  normal;
-  font-family: 'Circular-Loom';
-
-  src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWeb-Book.woff2') format('woff2');
-}
-
-@font-face {
-  font-weight: 500;
-  font-style:  normal;
-  font-family: 'Circular-Loom';
-
-  src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWeb-Medium.woff2') format('woff2');
-}
-
-@font-face {
-  font-weight: 700;
-  font-style:  normal;
-  font-family: 'Circular-Loom';
-
-  src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWeb-Bold.woff2') format('woff2');
-}
-
-@font-face {
-  font-weight: 900;
-  font-style:  normal;
-  font-family: 'Circular-Loom';
-
-  src: url('chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/fonts/CircularXXWeb-Black.woff2') format('woff2');
-}</style></head>
-<body data-new-gr-c-s-check-loaded="14.1086.0" data-gr-ext-installed="" cz-shortcut-listen="true">
+    </head>
+<body>
 <h1>Temperature Converter</h1>
 <section>
-    <label><input type="radio" value="c" name="converType" checked=""> Celsius to Fahrenheit</label>
+    <label><input type="radio" value="c" name="converType" checked> Celsius to Fahrenheit</label>
     <label><input type="radio" value="f" name="converType"> Fahrenheit to Celsius</label>
     <br><br>
     <div id="box">
 
-        <div class="block cTof" style="left: 0px;">
+        <div class="block cTof">
         <h4>Celsius</h4>
         <input id="cTof" size="4" type="number" placeholder="Celsius">
         </div>
          <div class="eq">=</div>
         <div class="block fToc" style="left: 230px;">
             <h4>Fahrenheit</h4>
-            <input id="fToc" type="number" placeholder="Fahrenheit" readonly="true">
+            <input  id="fToc" type="number" placeholder="Fahrenheit" readonly>
         </div>
        
     </div>
 </section>
-
-
-<link rel="stylesheet" type="text/css" href="chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/css/blur.css" class="loom-blur-styles"></body><loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container><loom-container id="lo-companion-container"><loom-shadow classname="resolved"></loom-shadow></loom-container><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></html>
+</body>
+</html>
